src/objects/Retail_Outlook_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASP__c</fullName>
        <description>ASP from the price book at the time of outlook creation.</description>
        <label>ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_GM_Amount__c</fullName>
        <formula>( ASP__c - MCPU__c + RO_Price__c  ) * (Units__c +  RO_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Otlk Adj GM H/M RO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_GM_Percentage__c</fullName>
        <formula>( ASP__c - MCPU__c + RO_Price__c )/( ASP__c + RO_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Sales__c</fullName>
        <formula>(ASP__c +  RO_Price__c ) * ( Units__c + RO_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Otlk Adj Sales H/M RO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Units__c</fullName>
        <formula>Units__c + RO_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Otlk Adj Units H/M RO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <label>Backlog</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Ops_Comments__c</fullName>
        <label>Biz Ops Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <formula>Text(Retail_Forecast_Line__r.Retail_Price_Book_Line__r.Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPFR__c</fullName>
        <description>Collaborative Planning and Forecast Review</description>
        <inlineHelpText>Collaborative Planning and Forecast Review</inlineHelpText>
        <label>CPFR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <formula>TEXT(Retail_Forecast_Line__r.Retail_Price_Book_Line__r.Carrier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Outlook Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delta_CPFR__c</fullName>
        <formula>Total__c - CPFR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta CPFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delta_Outlook__c</fullName>
        <formula>Units__c  - Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta Outlook</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Retail_Forecast_Line__r.Retail_Price_Book_Line__r.Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Amount__c</fullName>
        <formula>( ASP__c - MCPU__c )* Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Percentage__c</fullName>
        <formula>(ASP__c - MCPU__c ) / ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inventory_On_Hand__c</fullName>
        <label>Inventory On Hand</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCPU__c</fullName>
        <description>MCPU from the price book at the time of outlook creation.</description>
        <label>MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <formula>Retail_Forecast_Line__r.Retail_Price_Book_Line__r.MSRP__c</formula>
        <inlineHelpText>Manufacturer Suggested Retail Price</inlineHelpText>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_ASP__c</fullName>
        <label>Plan ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Delta_GM_Amount__c</fullName>
        <formula>GM_Amount__c - Plan_GM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Delta GM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Delta_GM_Percentage__c</fullName>
        <formula>GM_Percentage__c - Plan_GM_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Delta GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Delta_Sales__c</fullName>
        <formula>Sales__c - (Plan_ASP__c *  Plan_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Delta Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Delta_Units__c</fullName>
        <formula>Units__c - Plan_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Delta Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_GM_Amount__c</fullName>
        <formula>( Plan_ASP__c  -  Plan_MCPU__c )* Plan_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan GM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_GM_Percentage__c</fullName>
        <formula>( Plan_ASP__c - Plan_MCPU__c)/ Plan_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_MCPU__c</fullName>
        <label>Plan MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Sales__c</fullName>
        <formula>Plan_ASP__c * Plan_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Units__c</fullName>
        <label>Plan Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Week_Retail_Outlook_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Week Retail Outlook Line</label>
        <referenceTo>Retail_Outlook_Line__c</referenceTo>
        <relationshipLabel>Retail Outlook Lines</relationshipLabel>
        <relationshipName>Retail_Outlook_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Retail_Forecast_Line__r.Retail_Price_Book_Line__r.Product__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Retail_Forecast_Line__r.Retail_Price_Book_Line__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RO Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Units__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RO Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Forecast_Line__c</fullName>
        <label>Retail Forecast Line</label>
        <referenceTo>Retail_Forecast_Line__c</referenceTo>
        <relationshipLabel>Retail Outlook Lines</relationshipLabel>
        <relationshipName>Retail_Outlook_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Retail_Outlook__c</fullName>
        <label>Retail Outlook</label>
        <referenceTo>Retail_Outlook__c</referenceTo>
        <relationshipLabel>Retail Outlook Lines</relationshipLabel>
        <relationshipName>Retail_Outlook_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>ASP__c * Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Through__c</fullName>
        <label>Sell Through</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipments__c</fullName>
        <label>Shipments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supply Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Backlog__c + Shipments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Outlook Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_outlook__c</fullName>
        <formula>Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOW_Adjusted_GM__c</fullName>
        <formula>Adjusted_GM_Amount__c  - IF((Prev_Week_Retail_Outlook_Line__c=NULL) , Plan_GM_Amount__c , Prev_Week_Retail_Outlook_Line__r.Adjusted_GM_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW Adjusted GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOW_Adjusted_Sales__c</fullName>
        <formula>Adjusted_Sales__c  - IF( (Prev_Week_Retail_Outlook_Line__c=NULL) , Plan_Sales__c , Prev_Week_Retail_Outlook_Line__r.Adjusted_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW Adjusted Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOW_Adjusted_Units__c</fullName>
        <formula>Adjusted_Units__c  - IF((Prev_Week_Retail_Outlook_Line__c=NULL) , Plan_Units__c , Prev_Week_Retail_Outlook_Line__r.Adjusted_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW Adjusted Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOW_GM_Amount__c</fullName>
        <formula>GM_Amount__c - IF((Prev_Week_Retail_Outlook_Line__c=NULL) , Plan_GM_Amount__c , Prev_Week_Retail_Outlook_Line__r.GM_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW GM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOW_GM_Percentage__c</fullName>
        <formula>GM_Percentage__c - IF( (Prev_Week_Retail_Outlook_Line__c=NULL) ,  Plan_GM_Percentage__c , Prev_Week_Retail_Outlook_Line__r.GM_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WOW_Sales__c</fullName>
        <formula>Sales__c - IF( (Prev_Week_Retail_Outlook_Line__c=NULL) , Plan_Sales__c , Prev_Week_Retail_Outlook_Line__r.Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOW_Units__c</fullName>
        <formula>Units__c - IF((Prev_Week_Retail_Outlook_Line__c=NULL) , Plan_Units__c , Prev_Week_Retail_Outlook_Line__r.Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOW Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weeks_On_Hand__c</fullName>
        <label>Weeks On Hand</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Retail Outlook Line</label>
    <nameField>
        <displayFormat>WOL-{000000}</displayFormat>
        <label>Retail Outlook Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Outlook Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked_outlook_cannot_be_modified</fullName>
        <active>true</active>
        <description>User cannot make changes to Outlook Line if Outlook is locked.</description>
        <errorConditionFormula>Retail_Outlook__r.Outlook_Locked__c</errorConditionFormula>
        <errorMessage>You cannot change outlook line on a locked outlook.</errorMessage>
    </validationRules>
</CustomObject>